# Django_Demo

./: README.md  pyproject.toml
demoDjango/: manage.py
demoDjango/demoApp/: forms.py  urls.py  views.py
demoDjango/demoApp/migrations/: 0001_initial.py  0002_alter_todolist_user.py
demoDjango/demoApp/templates/demoApp/: base.html  create.html  home.html  list.html  userInfo.html
demoDjango/demoDjango/: asgi.py  settings.py  urls.py  wsgi.py
demoDjango/register/: views.py
demoDjango/register/templates/register/: register.html
demoDjango/register/templates/registration/: login.html
