[tool.poetry]
name = "django_demo"
version = "0.1.0"
description = "demo"
authors = ["Arik <BBArik@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
django-crispy-forms = "^1.14.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
appmap = {version = "^1.5.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
